tests/functions/missing_comma_in_parameters.out
[31merror[error]: Expect ')' after parameters.
----- Traceback -----
  ┌─ <unknown>:1:12
  | 
1 | def foo(a, b c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z):
  |             ^
[0m